--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -39,8 +39,11 @@
 % ---> distinguere STRUTTURA (classi) da COMPORTAMENTO (procedure)?
 % - diagrammi delle classi
 % - se serve, qualche diagramma di attività/sequenza
-\section{Componenti}
-\input{tex/componenti}
+\section{Classi e componenti frontend}
+\input{tex/packageClassiST-FE}
+
+\section{Classi e componenti backend}
+\input{tex/packageClassiST-BE}
 
 % JSON, client-server... ???
 \section{Modelli dei dati e interfacce}
