--- a/doc/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/arch.tex
@@ -107,10 +107,10 @@ Il secondo e il terzo servizio, invece, sono un programma Java che genera due \e
 \end{itemize}
 
 % >>> RICORDARSI DEL DIAGR. DEI PACKAGE DEL SERVER (diag. 7)
-% \begin{figure} \label{fig:server_pkg}
-% 	\includegraphics[scale=0.5]{img/server_pkg}
-%	\caption{Architettura del server.}
-% \end{figure}
+\begin{figure} \label{fig:server_pkg}
+	\includegraphics[scale=0.5]{img/server_pkg}
+	\caption{Architettura del server.}
+\end{figure}
 
 
 
