risolto problema nogloxy + altro

--- a/doc/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
@@ -20,7 +20,7 @@ questo package contiene al suo interno le classi utili a rappresentare un proget
 \item \hyperref[\nogloxy{SWEDesigner::Server::Stereotype}]{\nogloxy{\texttt{Stereotype}}}\\
 all'interno di questo package sono inserite le classi che descrivono ciò che caratterizza un particolare stereotipo. Queste classi derivano tutte da una classe base, chiamata Stereotype. Le classi che definiscono come deve variare ogni stereotipo sono contraddistinte dal suffisso \emph{Stereotype} (e.g. BoardStereotype). Si noti che tra queste classi non sono presenti dei legami, in quanto queste classi sono necessarie alla generazione del codice. La struttura degli stereotipi assegnabili ad ogni classe e le loro relazioni saranno definite successivamente nella \emph{Definizione di prodotto v 1.0.0}.
 \item \hyperref[\nogloxy{SWEDesigner::Server::Template}]{\nogloxy{\texttt{Template}}}\\
-questo package contiene le classi necessarie a trasformare l'oggetto che rappresenta il programma in una stringa di testo che rappresenta il codice sorgente tramite un sistema a template, il quale definirà tramite dei file di testo la struttura di ogni componente del programma; per facilitare questo compito sarà usata la libreria \stringtemplate{}. Similarmente al package \emph{Generator} si è prevista la possibilità di implementare un sistema di template per ogni linguaggio, implementando diversamente l'interfaccia della classe Template e definendo un nuovo package (e.g. \emph{Java}).
+questo package contiene le classi necessarie a trasformare l'oggetto che rappresenta il programma in una stringa di testo che rappresenta il codice sorgente tramite un sistema a template, il quale definirà tramite dei file di testo la struttura di ogni componente del programma; per facilitare questo compito sarà usata la libreria \emph{StringTemplate}. Similarmente al package \emph{Generator} si è prevista la possibilità di implementare un sistema di template per ogni linguaggio, implementando diversamente l'interfaccia della classe Template e definendo un nuovo package (e.g. \emph{Java}).
 \item \hyperref[\nogloxy{SWEDesigner::Server::Utility}]{\nogloxy{\texttt{Utility}}}\\
 in questo package sono contenute le componenti secondarie necessarie al server, indipendentemente dal linguaggio target dell'applicazione.
 \end{itemize}
@@ -516,7 +516,7 @@ all'interno di questo package sono inserite le classi che descrivono ciò che ca
 \subsubsection{Informazioni generali}
 \begin{itemize}
 \item \textbf{Descrizione}\\
-questo package contiene le classi necessarie a trasformare l'oggetto che rappresenta il programma in una stringa di testo che rappresenta il codice sorgente tramite un sistema a template, il quale definirà tramite dei file di testo la struttura di ogni componente del programma; per facilitare questo compito sarà usata la libreria \stringtemplate{}. Similarmente al package \emph{Generator} si è prevista la possibilità di implementare un sistema di template per ogni linguaggio, implementando diversamente l'interfaccia della classe Template e definendo un nuovo package (e.g. \emph{Java}).
+questo package contiene le classi necessarie a trasformare l'oggetto che rappresenta il programma in una stringa di testo che rappresenta il codice sorgente tramite un sistema a template, il quale definirà tramite dei file di testo la struttura di ogni componente del programma; per facilitare questo compito sarà usata la libreria \emph{StringTemplate}. Similarmente al package \emph{Generator} si è prevista la possibilità di implementare un sistema di template per ogni linguaggio, implementando diversamente l'interfaccia della classe Template e definendo un nuovo package (e.g. \emph{Java}).
 \item \textbf{Padre}: \hyperref[\nogloxy{SWEDesigner::Server}]{\nogloxy{\texttt{Server}}}
 \item \textbf{Package contenuti}:
 \begin{itemize}
