--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -12,6 +12,8 @@
 \title{Specifica Tecnica}
 % \date{9 gennaio 2017}
 
+\newcommand{\nogloxy}[1]{#1}
+
 \begin{document}
 \maketitle
 \include{diario}
