--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_1.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_1.tex
@@ -1275,6 +1275,13 @@ Questo ha portato un ritardo complessivo pari a 3 giorni rispetto alla baseline;
 \label{tab:car}
 \caption{Differenza preventivo-consuntivo per ruolo, \AR.}
 \end{figure}
+
+
+\subsubsection{Considerazioni}
+La pianificazione è stata in gran parte rispettata, eccetto un trascurabile ritardo per malattia. 
+
+Un aspetto trascurato potenzialmente migliorativo della pianificazione corrente consiste nell'includere nella pianificazione delle attività anche degli incontri con l'azienda \ZU, accordandosi preventivamente, in modo da poter avere dei rapporti continui con l'azienda proponente. Questa opzione sarà considerata dal \Rx{} nei periodi successivi.
+
 %%%%%%%% da fare%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -1387,6 +1394,14 @@ Questo ritardo comunque non ha influenzato eccessivamente gli altri task, i qual
 \label{tab:car}
 \caption{Differenza preventivo-consuntivo per ruolo, \ARI.}
 \end{figure}
+
+
+
+\subsubsection{Considerazioni}
+La pianificazione è stata rispettata ad un livello sub-ottimale, ma comunque accettabile. Il \Rx{} terrà in maggior conto gli impegni universitari dei componenti del gruppo, prevedendo anche la necessità di ritentare più volte un esame.
+
+L'utilità di questo periodo è stata inferiore a quanto preventivato: la sua ridotta dimensione è risultata troppo dispersiva.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Consuntivo \PA}
 \introconsuntivo{\PA}
