intro tracciamento + altro

--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -18,7 +18,7 @@
 \maketitle
 \include{diario}
 \tableofcontents
-\listofpattern
+% \listofpattern
 
 
 
@@ -41,10 +41,10 @@
 % ---> distinguere STRUTTURA (classi) da COMPORTAMENTO (procedure)?
 % - diagrammi delle classi
 % - se serve, qualche diagramma di attività/sequenza
-\section{Classi e componenti frontend}
+\section{Classi e componenti del \emph{front end}}
 \input{tex/packageClassiST-FE}
 
-\section{Classi e componenti backend}
+\section{Classi e componenti del \emph{back end}}
 \input{tex/packageClassiST-BE}
 
 % JSON, client-server... ???
@@ -60,7 +60,7 @@
 
 \appendix
 
-\section{JointJS}
+\section{JointJS} \label{sec:app_jointjs}
 \input{tex/appjoint}
 
 \section{Architettura di Backbone.js}
