--- a/doc/Esterni/Specifica_tecnica/tex/appjoint.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/appjoint.tex
@@ -2,28 +2,25 @@ La libreria \jointjs{} è una libreria per diagrammi scritta in Javascript e svi
 
 Tra alcune funzionalità più di nota si trovano:
 \begin{itemize}
-\item elementi per diagrammi base (e.g. rettangoli, cerchi, testo, immagini);
-\item diagrammi già pronti all'uso;
-\item elementi custom basati su SVG;
-\item elementi (\texttt{Elements}) e collegamenti (\texttt{Link}) interattivi;
-\item collegamenti personalizzabili (punta, etichette);
-\item arrotondamento dei collegamenti (con interpolazioni di bezier);
-\item elementi magnetici;
-\item diagrammi gerarchici;
-\item serializzazione/deserializzazione con JSON;
-\item altamente event-driven;
-\item zoom in/out;
-\item supporto a dispositivi touch;
-\item architettura MVC (da \backbonejs).
-
+	\item elementi per diagrammi base (e.g. rettangoli, cerchi, testo, immagini);
+	\item diagrammi già pronti all'uso;
+	\item elementi custom basati su SVG;
+	\item elementi (\texttt{Elements}) e collegamenti (\texttt{Link}) interattivi;
+	\item collegamenti personalizzabili (punta, etichette);
+	\item arrotondamento dei collegamenti (con interpolazioni di bezier);
+	\item elementi magnetici;
+	\item diagrammi gerarchici;
+	\item serializzazione/deserializzazione con JSON;
+	\item altamente event-driven;
+	\item zoom in/out;
+	\item supporto a dispositivi touch;
+	\item architettura MVC (da \backbonejs).
 \end{itemize}
 
-
 \begin{figure}[H]
-\makebox[\textwidth][c]{
-\includegraphics[width=1\textwidth]{img/jointjs.png}}
-\caption{Esemplificazione delle classi di \jointjs{}}
-
+	\makebox[\textwidth][c]{
+	\includegraphics[width=1\textwidth]{img/jointjs}}
+	\caption{Esemplificazione delle classi di \jointjs.}
 \end{figure}
 
 La figura precedente mostra una esemplificazione della gerarchia di classi usata da \proj. Essa mostra tre package distinti, model, view e collection, per indicare che essi derivano da \texttt{Backbone.Model}, \texttt{Backbone.View} e \texttt{Backbone.Collection} rispettivamente.
