--- a/doc/Esterni/Specifica_tecnica/tex/tracciamentoClassiRequisiti.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tracciamentoClassiRequisiti.tex
@@ -1,4 +1,4 @@
-\subsection{Tracciamento Classi-Requisiti}
+\subsection{Tracciamento classi-requisiti}
 \normalsize
 \begin{longtable}{|>{\centering}m{10cm}|m{3cm}<{\centering}|}
 \hline 
