--- a/doc/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/intro.tex
@@ -6,11 +6,10 @@
 
 \subsection{Scopo del documento}
 Questo documento ha lo scopo di definire, ad alto livello, l'architettura software di \proj; ci focalizziamo quindi sulla \emph{struttura} del software, cioè sulla descrizione delle sue componenti. L'implementazione del nostro software è a oggetti; per questo, le componenti descritte sono classi e loro istanze.
-% Ecco una prova di pattern: \pattern{Observer}
 
 Riteniamo che l'architettura esposta di seguito, accompagnata da un documento più preciso che verrà prodotto nelle prossime settimane (Definizione di Prodotto), sia ragionevole e fattibile. La difficoltà di generare codice eseguibile è stata superata grazie ad un uso accorto di librerie open-source, stili architetturali e \emph{design pattern}. Il tutto è stato svolto con grande attenzione ai princìpi della programmazione ad oggetti, per aumentare il grado di coesione di un'architettura che rischia ad ogni momento di gonfiarsi inutilmente.
 
-Ci è parso utile indicizzare i \emph{design pattern} utilizzati; per questo sono stati riportati in un elenco (dopo l'indice generale).
+% Ci è parso utile indicizzare i \emph{design pattern} utilizzati; per questo sono stati riportati in un elenco (dopo l'indice generale).
 
 \subsection{Scopo del prodotto}
 \scopo
