--- a/doc/Esterni/Specifica_tecnica/tex/tracciamentoRequisitiClassi.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tracciamentoRequisitiClassi.tex
@@ -1,4 +1,4 @@
-\subsection{Tracciamento Requisiti-Classi}
+\subsection{Tracciamento requisiti-classi}
 \normalsize
 \begin{longtable}{|>{\centering}m{3cm}|m{10cm}<{\centering}|}
 \hline 
