aggiunta immagine dependency injection

--- a/doc/Esterni/Specifica_tecnica/tex/pattern.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/pattern.tex
@@ -2,7 +2,10 @@
 %%  Design pattern creazionali
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\begin{figure} \label{fig:injector}
+	\includegraphics[scale=0.5]{img/injector}
+	\caption{Dependency Injection.}
+\end{figure}
 
 \subsection{Dependency injection}
 
