--- a/doc/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/diario.tex
@@ -4,7 +4,7 @@
 \begin{diario}
 	2.0.0 & {\LS} (Responsabile) & 01/02/2017 & Approvazione del documento \\ \hline
 	1.1.0 & {\GG} (Verificatore) & 01/02/2017 & Verifica del documento \\ \hline
-	1.0.4 & {\AZ} (Analista) & 31/01/2017 & Inserito UC5.26 con relativo requisito e tracciamento nelle tabelle e inseriti i requisiti RFO7, RFO7.1, RFO7.2, RFO8, RFO9 e RFO10 \\ \hline
+	1.0.4 & {\AZ} (Analista) & 31/01/2017 & Inserito UC5.26 con relativo requisito e tracciamento nelle tabelle e inseriti i requisiti RFO7, RFO8, RFO8.1, RFO8.2, RFO9, RFO10 e RFO11\\ \hline
 	1.0.3 & {\AZ} (Analista) & 29/01/2017 & Corretta la descrizione dello UC5 e approfondita la descrizione dello UC7 \\ \hline
 	1.0.2 & {\AZ} (Analista) & 28/01/2017 & Corretti UC4.1.6.3.2, UC4.2.1 e inserito perimetro sistema del UC5\\ \hline
 	1.0.1 & {\AZ} (Analista) & 26/01/2017 & Inserimento scenario alternativo allo UC2, creazione UC3.1 con relativo requisito e tracciamento nelle tabelle e corrette alcune postcondizioni \\ \hline
